--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,23 @@
+appdirs==1.4.3
 astroid==2.4.0
 atari-py==0.2.6
 autopep8==1.5.2
 backcall==0.1.0
+CacheControl==0.12.6
+certifi==2019.11.28
+chardet==3.0.4
 cloudpickle==1.2.2
+colorama==0.4.3
+contextlib2==0.6.0
 cycler==0.10.0
 decorator==4.4.2
+distlib==0.3.0
+distro==1.4.0
 future==0.18.2
 gym==0.15.4
+html5lib==1.0.1
+idna==2.8
+ipaddr==2.2.0
 ipykernel==5.2.1
 ipython==7.14.0
 ipython-genutils==0.2.0
@@ -16,14 +27,18 @@ jupyter-client==6.1.3
 jupyter-core==4.6.3
 kiwisolver==1.2.0
 lazy-object-proxy==1.4.3
+lockfile==0.12.2
 matplotlib==3.2.1
 mccabe==0.6.1
+msgpack==0.6.2
 numpy==1.18.3
 opencv-python==4.2.0.34
+packaging==20.3
 parso==0.7.0
+pep517==0.8.2
 pexpect==4.8.0
 pickleshare==0.7.5
-pkg-resources==0.0.0
+progress==1.5
 prompt-toolkit==3.0.5
 protobuf==3.11.3
 ptyprocess==0.6.0
@@ -34,15 +49,19 @@ Pygments==2.6.1
 pylint==2.5.0
 pyparsing==2.4.7
 python-dateutil==2.8.1
+pytoml==0.1.21
 pyzmq==19.0.0
-roboschool==1.0.49
+requests==2.22.0
+retrying==1.3.3
 scipy==1.4.1
 six==1.14.0
 tensorboardX==2.0
 toml==0.10.0
-torch==1.1.0
+torch==1.5.0
 tornado==6.0.4
 traitlets==4.3.3
 typed-ast==1.4.1
+urllib3==1.25.8
 wcwidth==0.1.9
+webencodings==0.5.1
 wrapt==1.12.1
